Fixes time positioning on mobile.

--- a/css/index.css
+++ b/css/index.css
@@ -117,6 +117,17 @@ body {
 }
 
 /* line 41, ../sass/main.scss */
+.bold {
+  font-weight: bold;
+}
+
+/* line 44, ../sass/main.scss */
+.highlight {
+  font-weight: bold;
+  color: #fa8c7c;
+}
+
+/* line 49, ../sass/main.scss */
 .loading {
   position: fixed;
   top: 0;
@@ -129,7 +140,7 @@ body {
 }
 
 /* Header */
-/* line 56, ../sass/main.scss */
+/* line 64, ../sass/main.scss */
 .nav {
   width: 100%;
   height: 120px;
@@ -143,16 +154,16 @@ body {
   box-shadow: 0 8px 0 #3e6ba9;
   z-index: 2;
 }
-/* line 68, ../sass/main.scss */
+/* line 76, ../sass/main.scss */
 .nav * {
   display: inline-block;
   vertical-align: middle;
 }
-/* line 74, ../sass/main.scss */
+/* line 82, ../sass/main.scss */
 .nav img {
   height: 30px;
 }
-/* line 79, ../sass/main.scss */
+/* line 87, ../sass/main.scss */
 .nav .countdown {
   padding-left: 17.33333px;
   position: absolute;
@@ -163,7 +174,7 @@ body {
   text-transform: uppercase;
   overflow-x: hidden;
 }
-/* line 89, ../sass/main.scss */
+/* line 97, ../sass/main.scss */
 .nav .countdown .timer {
   width: 210px;
   display: inline-block;
@@ -171,18 +182,18 @@ body {
   border-radius: 6px;
   background: rgba(255, 255, 255, 0.06);
 }
-/* line 96, ../sass/main.scss */
+/* line 104, ../sass/main.scss */
 .nav .countdown .timer .unit {
   width: 44px;
   font-size: 18px;
   font-weight: 600;
   color: #fff;
 }
-/* line 102, ../sass/main.scss */
+/* line 110, ../sass/main.scss */
 .nav .countdown .timer .separator {
   width: auto;
 }
-/* line 108, ../sass/main.scss */
+/* line 116, ../sass/main.scss */
 .nav .cta {
   height: 54.54545px;
   position: absolute;
@@ -192,15 +203,16 @@ body {
   line-height: 54.54545px;
 }
 
-/* line 120, ../sass/main.scss */
+/* line 128, ../sass/main.scss */
 .content {
   width: 100%;
   padding-top: 198px;
   padding-bottom: 70px;
   background: #fff;
   color: #333;
+  overflow: hidden;
 }
-/* line 127, ../sass/main.scss */
+/* line 136, ../sass/main.scss */
 .content > section {
   width: 60%;
   margin-left: 20%;
@@ -210,33 +222,43 @@ body {
 
 /* Media Queries */
 @media only screen and (max-width: 678px) {
-  /* line 137, ../sass/main.scss */
+  /* line 146, ../sass/main.scss */
   .content > section {
     width: 80%;
     margin-left: 10%;
     margin-right: 10%;
   }
 
-  /* line 145, ../sass/main.scss */
+  /* line 154, ../sass/main.scss */
   .about-content .info {
     width: 80% !important;
     margin-left: 10% !important;
     margin-right: 10% !important;
   }
 
-  /* line 153, ../sass/main.scss */
+  /* line 162, ../sass/main.scss */
   .countdown {
     visibility: hidden;
   }
 
-  /* line 157, ../sass/main.scss */
+  /* line 166, ../sass/main.scss */
   .legend {
     visibility: hidden;
   }
 
-  /* line 161, ../sass/main.scss */
+  /* line 170, ../sass/main.scss */
   .caption {
     visibility: hidden;
+  }
+
+  /* line 180, ../sass/main.scss */
+  .timeline li.segment > .time > span {
+    left: 0;
+    text-align: left !important;
+  }
+  /* line 186, ../sass/main.scss */
+  .timeline li.segment > .info {
+    margin-top: 24px;
   }
 }
 /* line 4, ../sass/index.scss */
