--- a/sass/about.scss
+++ b/sass/about.scss
@@ -31,13 +31,6 @@ body {
             font-size: 18px;
             line-height: 26px;
 
-            .bold {
-                font-family: Gotham Bold;
-            }
-            .highlight {
-                font-family: Gotham Bold;
-                color: $primary-peach;
-            }
             &.shout {
                 font-size: 28px;
                 font-family: Gotham Bold;
